# garden

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.mjs  flake.nix  justfile  package.json  pnpm-lock.yaml  turbo.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json
apps/web/src/: main.ts
bindings/: BlockContent.ts  ChannelId.ts  Connection.ts  FieldUpdate.ts  NewBlock.ts  NewChannel.ts
crates/garden-core/: Cargo.toml
crates/garden-core/bindings/: BlockId.ts  BlockUpdate.ts  NewConnection.ts  Page.ts
crates/garden-core/src/: error.rs  lib.rs  validation.rs
crates/garden-core/src/models/: block.rs  channel.rs  common.rs  connection.rs  mod.rs
crates/garden-core/src/ports/: memory.rs  mod.rs  repository.rs
crates/garden-core/src/services/: block.rs  channel.rs  connection.rs  garden.rs  media.rs  mod.rs
crates/garden-db/: Cargo.toml
crates/garden-db/migrations/: 20260116000000_initial_schema.sql  20260117000000_add_block_archive_metadata.sql
crates/garden-db/src/: error.rs  lib.rs
crates/garden-db/src/sqlite/: block.rs  channel.rs  connection.rs  database.rs  mod.rs  util.rs
crates/garden-db/tests/: sqlite_integration.rs
crates/garden-tauri/: Cargo.toml
crates/garden-tauri/bindings/: ErrorCode.ts  TauriError.ts
crates/garden-tauri/src/: error.rs  init.rs  lib.rs  state.rs
crates/garden-tauri/src/commands/: blocks.rs  channels.rs  connections.rs  media.rs  mod.rs
docs/: ARCHITECTURE.md  BUILD-SYSTEM-REVIEW.md  COMPONENT-LIBRARY.md  DATABASE-SCHEMA.md  ENGINEERING-REVIEW.md  GETTING-STARTED.md  RUST-REVIEW.md  TYPE-GENERATION.md  TYPESCRIPT-REVIEW.md
docs/adr/: 001-hexagonal-architecture.md  002-field-update-pattern.md  README.md  template.md
