[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ada"]
license = "MIT"
repository = "https://github.com/ada/garden"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1", features = [] }
tauri-build = "2.0"
tokio = { version = "1", features = ["full"] }
