[package]
name = "garden-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Garden core library - domain models, ports, and services"

[[bin]]
name = "export-types"
path = "src/bin/export-types.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
url.workspace = true
tracing.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
