[package]
name = "garden-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Garden desktop application"

[lib]
name = "garden_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
