[package]
name = "garden-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Garden desktop application"

[lib]
name = "garden_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
# Tauri
tauri.workspace = true
tauri-plugin-shell = "2"

# Garden crates
garden-tauri = { path = "../../../crates/garden-tauri" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
